--- a/LabA/makefile
+++ b/LabA/makefile
@@ -1,7 +1,7 @@
 all: encoder
 
-Encode: encoder.o
-	gcc -g -m32 -Wall -o Encode encoder.o
+encoder: encoder.o
+	gcc -g -m32 -Wall -o encoder encoder.o
 
 encoder.o: encoder.c
 	gcc -g -Wall -m32 -c -o encoder.o encoder.c
