Stage all changes

--- a/Lab1/T3/Makefile
+++ b/Lab1/T3/Makefile
@@ -1,12 +1,12 @@
-all: menu
+all: menu_map
 
-menu: menu.o
-	gcc -g -Wall -m32 -o menu menu.o
+menu_map: menu_map.o
+	gcc -g -Wall -m32 -o menu_map menu_map.o
 
-menu.o: menu.c
-	gcc -g -Wall -m32 -c -o menu.o menu.c
+menu_map.o: menu_map.c
+	gcc -g -Wall -m32 -c -o menu_map.o menu_map.c
 
 .PHONY: clean
 
 clean:
-	rm -f *.o menu
+	rm -f *.o menu_map
